force-app/main/default/objects/ECM_Configuration__c/ECM_Configuration__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>ECM Configuration</label>
    <nameField>
        <label>ECM Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ECM Configurations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>