force-app/main/default/objects/ECM_Configuration__c/fields/ECM_Face_Sheet_Starter_Page_Footer__c.field-meta.xml
<CustomField>
    <fullName>ECM_Face_Sheet_Starter_Page_Footer__c</fullName>
    <formula>&quot;&lt;/apex:form&gt;&quot; + BR() + &quot;&lt;/apex:page&gt;&quot; + BR()</formula>
    <label>ECM Face Sheet Starter Page Footer</label>
    <type>Text</type>
</CustomField>