force-app/main/default/objects/ECM_Configuration__c/fields/ECM_Face_Sheet_Starter_Page_Header__c.field-meta.xml
<CustomField>
    <fullName>ECM_Face_Sheet_Starter_Page_Header__c</fullName>
    <formula>&quot;&lt;apex:page controller=\&quot;ExpIntakeController\&quot; sidebar=\&quot;false\&quot; renderAs=\&quot;{&quot; + &quot;!&quot; +&quot;renderAs&quot; +&quot;}\&quot;&gt;&quot;+ BR() 
+ &quot;&lt;apex:stylesheet value=\&quot;{&quot; + &quot;!&quot; + &quot;URLFOR(&quot; + &quot;$&quot; + &quot;Resource.ExpResources, styleSheet)&quot; + &quot;}\&quot;/&gt;&quot; + BR() 
+ &quot;&lt;apex:form rendered=\&quot;{&quot;+ &quot;!&quot; +&quot;renderAsPdf&quot;+ &quot;}\&quot;&gt;&quot; + BR()
+ &quot;&lt;c:ExpPdfPageHeader dateRange=\&quot;dateRange\&quot; orgLogoUrl=\&quot;URLFOR($Resource.ExpResources, &apos;ecm_logo_small.png&apos;)\&quot; /&gt;&quot; + BR()
+  &quot;&lt;c:ExpPdfPageFooter /&gt;&quot; + BR() +BR()
+ &quot;&lt;!-- **** Based off of ECM Configuration: &quot;+Name+&quot; ****--&gt;&quot; +BR() + BR()</formula>
    <label>ECM Face Sheet Starter Page Header</label>
    <type>Text</type>
</CustomField>