force-app/main/default/objects/ECM_Configuration__c/fields/ECM_GrpSvcEnt_Config_Starter_Page_Header__c.field-meta.xml
<CustomField>
    <fullName>ECM_GrpSvcEnt_Config_Starter_Page_Header__c</fullName>
    <formula>&quot;&lt;apex:page controller=\&quot;ExpGroupServiceEntryController\&quot; sidebar=\&quot;false\&quot; tabStyle=\&quot;Group_Class__c\&quot;&gt;&quot; + BR() +
&quot;    &quot; + &quot;&lt;apex:stylesheet value=\&quot;{&quot; + &quot;!&quot; + &quot;URLFOR(&quot; + &quot;$&quot; + &quot;Resource.ExpResources, styleSheet)&quot; + &quot;}\&quot;/&gt;&quot; + BR() +
&quot;    &quot; + &quot;&lt;apex:form id=\&quot;theForm\&quot;&gt;&quot; +  BR() +
&quot;        &quot; + &quot;&lt;apex:image value=\&quot;{&quot; + &quot;!&quot; + &quot;$&quot; + &quot;Resource.EcmLogov2&quot; + &quot;}\&quot;/&gt;&quot; +  BR() +
&quot;        &quot; + &quot;&lt;apex:sectionHeader title=\&quot;{&quot; + &quot;!&quot; + &quot;selectedServiceActivityName&quot; +&quot;} - {&quot; + &quot;!&quot; + &quot;groupClassSessionName}\&quot; /&gt;&quot; +  BR() +
&quot;        &quot; + &quot;&lt;apex:pageBlock id=\&quot;thePageBlock\&quot;&gt;&quot; +  BR() +
&quot;            &quot; + &quot;&lt;apex:pageMessages id=\&quot;errors\&quot;/&gt;&quot; + BR() + BR() + 
&quot;&lt;!-- **** Based off of ECM Configuration: &quot;+Name+&quot; ****--&gt;&quot; +BR() + BR()</formula>
    <label>ECM GrpSvcEnt Config Starter Page Header</label>
    <type>Text</type>
</CustomField>