force-app/main/default/objects/ECM_Configuration__c/fields/ECM_Intake_Config_Starter_Page_Footer__c.field-meta.xml
<CustomField>
    <fullName>ECM_Intake_Config_Starter_Page_Footer__c</fullName>
    <formula>&quot;&lt;apex:pageBlockButtons &gt;&quot; +  BR() +
&quot;                &quot; + &quot;&lt;c:ExpNavigationButton id=\&quot;theButtons\&quot; theParentController=\&quot;&quot; + &quot;{&quot; + &quot;!&quot; + &quot;this&quot; + &quot;}\&quot;&quot; + &quot; thePageNum=\&quot;1\&quot;&quot; + &quot; postSaveRerender=\&quot;theForm\&quot;/&gt;&quot; +  BR() +
&quot;            &quot; + &quot;&lt;/apex:pageBlockButtons&gt;&quot; +  BR() +
&quot;        &quot;  + &quot;&lt;/apex:pageBlock&gt;&quot; +  BR() +
&quot;    &quot; + &quot;&lt;/apex:form&gt;&quot; +  BR() +
&quot;    &quot; + &quot;&lt;apex:includeScript value=\&quot;&quot; + &quot;{&quot; + &quot;!&quot; + &quot;$&quot; + &quot;Resource.ExpJavaScript&quot; + &quot;}\&quot;/&gt;&quot; +  BR() +
&quot;&lt;/apex:page&gt;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECM Intake Config Starter Page Footer</label>
    <type>Text</type>
</CustomField>