force-app/main/default/objects/ECM_Configuration__c/fields/ECM_Intake_Config_Starter_Page_Header__c.field-meta.xml
<CustomField>
    <fullName>ECM_Intake_Config_Starter_Page_Header__c</fullName>
    <formula>&quot;&lt;apex:page controller=\&quot;ExpIntakeController\&quot; sidebar=\&quot;false\&quot; tabStyle=\&quot;Intake__tab\&quot;&gt;&quot; + BR() + 
&quot; &quot; + &quot;&lt;apex:stylesheet value=\&quot;{&quot; + &quot;!&quot; + &quot;URLFOR(&quot; + &quot;$&quot; + &quot;Resource.ExpResources, styleSheet)&quot; + &quot;}\&quot;/&gt;&quot; + BR() + 
&quot; &quot; + &quot;&lt;apex:form id=\&quot;theForm\&quot;&gt;&quot; + BR() + 
&quot; &quot; + &quot;&lt;apex:image value=\&quot;{&quot; + &quot;!&quot; + &quot;$&quot; + &quot;Resource.EcmLogov2&quot; + &quot;}\&quot;/&gt;&quot; + BR() + 
&quot; &quot; + &quot;&lt;apex:sectionHeader title=\&quot;{&quot; + &quot;!&quot; + &quot;selectedProgram.Name&quot; +&quot;} Intake{&quot; + &quot;!&quot; + &quot;contactHeaderLabel}\&quot; /&gt;&quot; + BR() + 
&quot; &quot; + &quot;&lt;apex:pageBlock id=\&quot;thePageBlock\&quot;&gt;&quot; + BR() + 
&quot; &quot; + &quot;&lt;apex:pageMessages id=\&quot;errors\&quot;/&gt;&quot; + BR() + BR() + 
&quot;&lt;!-- **** Based off of ECM Configuration: &quot;+Name+&quot; ****--&gt;&quot; +BR() + BR()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This sample Visualforce is meant only as helper sample code for setting up an ECM configuration.</inlineHelpText>
    <label>ECM Intake Config Starter Page Header</label>
    <type>Text</type>
</CustomField>