force-app/main/default/objects/ECM_Configuration__c/fields/ECM_SE_Progress_Note_Starter_Page_Ftr__c.field-meta.xml
<CustomField>
    <fullName>ECM_SE_Progress_Note_Starter_Page_Ftr__c</fullName>
    <formula>&quot; &lt;/apex:repeat&gt;&quot; + BR() + &quot;&lt;/apex:form&gt;&quot; + BR() + &quot;&lt;/apex:page&gt;&quot; + BR()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECM SE Progress Note Starter Page Ftr</label>
    <type>Text</type>
</CustomField>