force-app/main/default/objects/ECM_Configuration__c/fields/ECM_SP_Config_Starter_Page_Footer__c.field-meta.xml
<CustomField>
    <fullName>ECM_SP_Config_Starter_Page_Footer__c</fullName>
    <formula>&quot;&lt;/apex:outputPanel&gt;&lt;/apex:tab&gt;&lt;apex:tab id=\&quot;tab2\&quot; name=\&quot;tab2\&quot; label=\&quot;&quot; + &quot;{&quot; + &quot;!&quot; + &quot;goalsTabLabel&quot; + &quot;}\&quot;&quot; + &quot; rendered=\&quot;&quot; + &quot;{&quot; + &quot;!&quot; + &quot;showGoalsTab&quot;+ &quot;}\&quot; ontabenter=\&quot;setElementValue(&apos;selectedMainTab&apos;,&apos;tab2&apos;);\&quot; &gt;&quot;  + BR() +
&quot;&lt;apex:panelGrid width=\&quot;100%\&quot; style=\&quot;text-align: center\&quot; columns=\&quot;1\&quot;&gt;&lt;apex:commandButton value=\&quot;&quot; + &quot;{&quot; + &quot;!&quot; + &quot;newGoalButtonLabel&quot; + &quot;}\&quot;&quot; +  &quot; action=\&quot;&quot; + &quot;{&quot; + &quot;!&quot; + &quot;addNewGoal&quot; + &quot;}\&quot;&quot; +  &quot; style=\&quot;text-align: center\&quot; onclick=\&quot;cacheCurrentValues(&apos;&quot; + Page_Prefix__c+ &quot;&apos;);showWaitCursor();\&quot; oncomplete=\&quot;clearCursor();reloadCurrentValuesCacheIfError(&apos;&quot; +Page_Prefix__c+ &quot;&apos;);\&quot; rendered=\&quot;&quot; + &quot;{&quot; + &quot;!&quot; + &quot;canAddGoal &amp;&amp; !isLocked&quot; + &quot;}\&quot; rerender=\&quot;errors,actionPlanContainer,goalSubTabsContainer\&quot; /&gt;&lt;/apex:panelGrid&gt;&quot;  + BR() +
&quot;&lt;apex:outputPanel id=\&quot;goalSubTabsContainer\&quot;&gt;&lt;input type=\&quot;hidden\&quot; id=\&quot;selectedGoalTabIndex\&quot; name=\&quot;selectedGoalTabIndex\&quot; value=\&quot;&quot; + &quot;{&quot; + &quot;!&quot; + &quot;selectedGoalTabIndex&quot; + &quot;}\&quot;/&gt;&lt;apex:dynamicComponent componentValue=\&quot;&quot; + &quot;{&quot; + &quot;!&quot; + &quot;goalSubTabs&quot;+ &quot;}\&quot; /&gt;&lt;/apex:outputPanel&gt;&quot; + BR() +
&quot;&lt;/apex:tab&gt;&lt;/apex:tabPanel&gt;&quot;  + BR() +
&quot;&lt;apex:pageBlockButtons &gt;&lt;c:ExpNavigationButton id=\&quot;theButtons\&quot; theParentController=\&quot;&quot; + &quot;{&quot; + &quot;!&quot; + &quot;this&quot; + &quot;}\&quot;&quot; + &quot; thePageNum=\&quot;1\&quot;&quot; + &quot; postSaveRerender=\&quot;errors,actionPlanContainer,goalSubTabsContainer\&quot; onClick=\&quot;cacheCurrentValues(&apos;&quot; + Page_Prefix__c+ &quot;&apos;);\&quot; onComplete=\&quot;reloadCurrentValuesCacheIfError(&apos;&quot; + Page_Prefix__c+ &quot;&apos;);\&quot;/&gt;&lt;/apex:pageBlockButtons&gt;&lt;input type=\&quot;hidden\&quot; id=\&quot;selectedMainTab\&quot; name=\&quot;selectedMainTab\&quot;/&gt;&quot;+ BR() +
&quot;&lt;/apex:pageBlock&gt;&lt;/apex:form&gt;&lt;script type=\&quot;text/javascript\&quot;&gt;scrollToElement(\&quot;&quot;+ &quot;{&quot; + &quot;!&quot; +&quot;pageBookmark&quot; + &quot;}\&quot;);resetSFPage();&lt;/script&gt;&lt;/apex:page&gt;&quot;</formula>
    <label>ECM SP Config Starter Page Footer</label>
    <type>Text</type>
</CustomField>