force-app/main/default/objects/ECM_Configuration__c/fields/Maximum_Page_Count__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Page_Count__c</fullName>
    <inlineHelpText>The maximum number of Visualforce pages in this configuration.</inlineHelpText>
    <label>Maximum Page Count</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>