force-app/main/default/objects/ECM_Configuration__c/fields/Page_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Page_Prefix__c</fullName>
    <inlineHelpText>Prefix for VisualForce pages to be used by this configuration. Example: if value = &apos;IntakePage&apos; then next and previous will navigate between IntakePage1, IntakePage2, etc based on maximum page value</inlineHelpText>
    <label>Page Prefix</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>