force-app/main/default/objects/ECM_Configuration__c/fields/PDF_Rendering__c.field-meta.xml
<CustomField>
    <fullName>PDF_Rendering__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set this field to true if the output page from the configuration is designed to be rendered as PDF.</inlineHelpText>
    <label>PDF Rendering</label>
    <type>Checkbox</type>
</CustomField>