force-app/main/default/objects/ECM_Configuration__c/fields/Service_Record_Type_Selection__c.field-meta.xml
<CustomField>
    <fullName>Service_Record_Type_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Service Record Type Selection</label>
    <type>Checkbox</type>
</CustomField>