force-app/main/default/objects/ECM_Configuration__c/fields/Service_Selection__c.field-meta.xml
<CustomField>
    <fullName>Service_Selection__c</fullName>
    <label>Service Selection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>