force-app/main/default/objects/ECM_Configuration__c/fields/Service_Selection_Options__c.field-meta.xml
<CustomField>
    <fullName>Service_Selection_Options__c</fullName>
    <label>Service Selection Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Service Area -&gt; Service</fullName>
            </value>
            <value>
                <fullName>Service Domain -&gt; Service Area -&gt; Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>