force-app/main/default/objects/ECM_Configuration__c/fields/Show_Goals_Tab__c.field-meta.xml
<CustomField>
    <fullName>Show_Goals_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Goals Tab</label>
    <type>Checkbox</type>
</CustomField>