force-app/main/default/objects/ECM_Configuration__c/recordTypes/Group_Service_Entry.recordType-meta.xml
<RecordType>
    <fullName>Group_Service_Entry</fullName>
    <active>true</active>
    <description>ECM Group Service Entry Configuration.</description>
    <label>Group Service Entry</label>
</RecordType>