force-app/main/default/objects/ECM_Configuration__c/recordTypes/Intake.recordType-meta.xml
<RecordType>
    <fullName>Intake</fullName>
    <active>true</active>
    <description>ECM Intake Configuration</description>
    <label>Intake</label>
</RecordType>