force-app/main/default/objects/ECM_Configuration__c/recordTypes/Service_Entry.recordType-meta.xml
<RecordType>
    <fullName>Service_Entry</fullName>
    <active>true</active>
    <description>ECM Service Entry Configuration for case records.</description>
    <label>Service Entry</label>
</RecordType>