force-app/main/default/objects/ECM_Configuration__c/recordTypes/Service_Plan.recordType-meta.xml
<RecordType>
    <fullName>Service_Plan</fullName>
    <active>true</active>
    <description>ECM Service Plan Configuration</description>
    <label>Service Plan</label>
</RecordType>