force-app/main/default/objects/ECM_Configuration__c/validationRules/Exp_GroupSE_Requires_Single_Service_Sel.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_GroupSE_Requires_Single_Service_Sel</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Record_Type_Developer_Name__c == &apos;Group_Service_Entry&apos; &amp;&amp;
 TEXT(Service_Selection__c) == &apos;Multiple&apos;, true, false)</errorConditionFormula>
    <errorMessage>&apos;Single&apos; Service Selection is required for Group Service Entry</errorMessage>
</ValidationRule>