force-app/main/default/objects/ECM_Configuration__c/validationRules/Exp_Max_Page_Count_GT_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Max_Page_Count_GT_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Maximum_Page_Count__c &lt;=0</errorConditionFormula>
    <errorMessage>Maximum Page Count must be &gt;= 1</errorMessage>
</ValidationRule>