force-app/main/default/objects/ECM_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Page_Prefix__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Description__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>PDF_Rendering__c</columns>
    <columns>Maximum_Page_Count__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>