force-app/main/default/objects/ECM_Configuration__c/listViews/All_Intake_Configurations.listView-meta.xml
<ListView>
    <fullName>All_Intake_Configurations</fullName>
    <columns>NAME</columns>
    <columns>Page_Prefix__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Description__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>PDF_Rendering__c</columns>
    <columns>Maximum_Page_Count__c</columns>
    <columns>Record_Type_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Intake</value>
    </filters>
    <label>All Intake Configurations</label>
</ListView>